--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -23,4 +23,7 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ![Snake animation](https://github.com/rachel16bit/rachel16bit/blob/output/github-contribution-grid-snake.svg)
+
+
   
